feat(deps): auth templete - bootstrap 4

--- a/src/app/auth/login-register/login-register.component.html
+++ b/src/app/auth/login-register/login-register.component.html
@@ -2,9 +2,9 @@
 <div class="container">
   <div class="row">
 
-    <div class="col-xs-12 index-input-container">
+    <div class="col-12 index-input-container">
       <div class="row flex-row login-row-container">
-        <div class="col-xs-12 col-sm-6 index-input index-input-left">
+          <div class="col-12 col-md-6 index-input index-input-left">
           <div class="form-panel register">
             <div class="form-header">
               <h1 style="margin-top: 3px;"><mat-icon style="vertical-align: text-top; padding-top: 2px;">perm_identity</mat-icon>&nbsp;Register</h1>
@@ -66,7 +66,7 @@
           </div>
 
         </div>
-        <div class="col-xs-12 col-sm-6 index-input index-input-right" *ngIf="!forgotPassswordForm">
+        <div class="col-12 col-md-6 index-input index-input-right" *ngIf="!forgotPassswordForm">
 
           <div class="form-panel login">
 
@@ -122,7 +122,7 @@
 
         </div>
 
-        <div class="col-xs-12 col-sm-6 index-input index-input-right" *ngIf="forgotPassswordForm">
+        <div class="col-12 col-md-6 index-input index-input-right" *ngIf="forgotPassswordForm">
 
           <div class="form-panel login">
 
