--- a/src/app/auth/confirm-delete/confirm-delete.component.html
+++ b/src/app/auth/confirm-delete/confirm-delete.component.html
@@ -6,7 +6,7 @@
 		padding: 0 !important;">
 
 	<div class="row">
-		<div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+		<div class="col-12 col-md-10 offset-sm-1 col-lg-8 offset-md-2 col-xl-6 offset-lg-3">
 
 			<mat-card style="padding: 30px;">
 				<h1 class="gd-primary">Please confirm your request</h1>
