--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -94,13 +94,13 @@
         <div class="footer-below">
           <div>
             <div class="row">
-              <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 disclaimer">
+              <div class="col-12 col-md-12 col-lg-8 col-xl-8 disclaimer">
                 <!--<strong>Copyright notices: </strong>&nbsp;-->
                 Grepolis is a browser game by InnoGames GmbH. This is an unofficial 3rd party site
                 <br/>
                 Gameplay images related to Grepolis are copyright of InnoGames GmbH.
               </div>
-              <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 disclaimer">
+              <div class="col-12 col-md-12 col-lg-4 col-xl-4 disclaimer">
                 Copyright &copy; Grepodata {{date| date:'yyyy'}}
                 <br/>
                 <a class="a-link-dialog" (click)="showDisclaimerDialog()">Disclaimer</a>
