--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -2,7 +2,7 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="hidden-xs hidden-sm hidden-md col-lg-3 text-left">
+      <div class="col-xl-3 text-left d-none d-lg-block">
         <div class="affix contents">
           <h4 (click)="scroll(Introduction)">Introduction</h4>
           <h4 (click)="scroll(Overview)">Overview</h4>
@@ -22,7 +22,7 @@
             <h5 (click)="scroll(Redis)">Redis</h5>
         </div>
       </div>
-      <div class="col-md-12 col-lg-8 text-center">
+      <div class="col-lg-12 col-xl-8 text-center">
         <br/>
         <h1>Blog: GrepoData Architecture</h1><br/>
         <h6 class="gd-primary">September 2021 by Camiel Kerkhofs</h6>
