--- a/src/app/discord/discord.component.html
+++ b/src/app/discord/discord.component.html
@@ -7,7 +7,7 @@
                         <div class="logo" style="background-image:url(../../assets/images/favicon_lg_white.png)"></div>
                         <div class="name-and-links">
 	                        <h2 style="color: #dde6e4;">GrepoData Bot</h2>
-	                        <span style="color: #dde6e4; !important;">Add GrepoData commands to your Discord server!</span>
+	                        <span style="color: #dde6e4 !important;">Add GrepoData commands to your Discord server!</span>
                         </div>
                         <a target="_blank" rel="nofollow" href="https://discord.com/api/oauth2/authorize?client_id=652263344429858872&permissions=2147502080&scope=applications.commands%20bot" alt="Add GrepoData Bot to Your Discord" class="button">
 	                        Add to Discord
@@ -42,50 +42,50 @@
 
                     <h3>Configuration</h3>
                     <div class="row">
-                      <div class="col-xs-5 vcenter"><pre>/help</pre></div>
-                      <div class="col-xs-7 vcenter">Shows a list of all commands</div>
+                      <div class="col-5 vcenter"><pre>/help</pre></div>
+                      <div class="col-7 vcenter">Shows a list of all commands</div>
                     </div>
                     <div class="row">
-                      <div class="col-xs-5 vcenter"><pre>/world [world]</pre></div>
-                      <div class="col-xs-7 vcenter">Set the <strong>default world</strong> for your discord to [world] <br/>e.g. <span style="font-style: italic;">/world en141</span> will change the default world to en141</div>
+                      <div class="col-5 vcenter"><pre>/world [world]</pre></div>
+                      <div class="col-7 vcenter">Set the <strong>default world</strong> for your discord to [world] <br/>e.g. <span style="font-style: italic;">/world en141</span> will change the default world to en141</div>
                     </div>
 
                     <hr>
 
                     <h3>Daily scoreboard</h3>
                     <div class="row">
-                        <div class="col-xs-5 vcenter"><pre>/today</pre></div>
-	                    <div class="col-xs-7 vcenter">Shows today's <strong>scoreboard</strong> for the default world</div>
+                        <div class="col-5 vcenter"><pre>/today</pre></div>
+	                    <div class="col-7 vcenter">Shows today's <strong>scoreboard</strong> for the default world</div>
                     </div>
 		                <div class="row">
-			                <div class="col-xs-5 vcenter"><pre>/today [world]</pre></div>
-			                <div class="col-xs-7 vcenter">Shows today's <strong>scoreboard</strong> for the given world <br/>E.g. '/today nl74' will show the scoreboard for nl74</div>
+			                <div class="col-5 vcenter"><pre>/today [world]</pre></div>
+			                <div class="col-7 vcenter">Shows today's <strong>scoreboard</strong> for the given world <br/>E.g. '/today nl74' will show the scoreboard for nl74</div>
 		                </div>
 
                     <br/>
 
                     <div class="row">
-                        <div class="col-xs-5 vcenter"><pre>/yesterday</pre></div>
-                        <div class="col-xs-7 vcenter">Shows yesterday's <strong>scoreboard</strong> for the default world</div>
+                        <div class="col-5 vcenter"><pre>/yesterday</pre></div>
+                        <div class="col-7 vcenter">Shows yesterday's <strong>scoreboard</strong> for the default world</div>
                     </div>
                     <div class="row">
-                      <div class="col-xs-5 vcenter"><pre>/yesterday [world]</pre></div>
-                      <div class="col-xs-7 vcenter">Shows yesterday's <strong>scoreboard</strong> for the given world <br/>E.g. '/yesterday nl74' will show yesterday's scoreboard for nl74</div>
+                      <div class="col-5 vcenter"><pre>/yesterday [world]</pre></div>
+                      <div class="col-7 vcenter">Shows yesterday's <strong>scoreboard</strong> for the given world <br/>E.g. '/yesterday nl74' will show yesterday's scoreboard for nl74</div>
                     </div>
 
                     <br/>
 
                     <div class="row">
-                        <div class="col-xs-5 vcenter"><pre>/alliance</pre></div>
-                        <div class="col-xs-7 vcenter">Shows today's <strong>alliance scoreboard</strong> for the default world</div>
+                        <div class="col-5 vcenter"><pre>/alliance</pre></div>
+                        <div class="col-7 vcenter">Shows today's <strong>alliance scoreboard</strong> for the default world</div>
                     </div>
                     <div class="row">
-                      <div class="col-xs-5 vcenter"><pre>/alliance [world]</pre></div>
-                      <div class="col-xs-7 vcenter">Shows today's <strong>alliance scoreboard</strong> for the given world <br/>E.g. '/alliance nl74' will show today's alliance scoreboard for nl74</div>
+                      <div class="col-5 vcenter"><pre>/alliance [world]</pre></div>
+                      <div class="col-7 vcenter">Shows today's <strong>alliance scoreboard</strong> for the given world <br/>E.g. '/alliance nl74' will show today's alliance scoreboard for nl74</div>
                     </div>
                     <div class="row">
-                      <div class="col-xs-5 vcenter"><pre>/alliance [world] [day]</pre></div>
-                      <div class="col-xs-7 vcenter">Shows today's <strong>alliance scoreboard</strong> for the given world <br/>[day] can be 'today' or 'yesterday'<br/>E.g. '/alliance nl74 yesterday' will show yesterday's alliance scoreboard for nl74</div>
+                      <div class="col-5 vcenter"><pre>/alliance [world] [day]</pre></div>
+                      <div class="col-7 vcenter">Shows today's <strong>alliance scoreboard</strong> for the given world <br/>[day] can be 'today' or 'yesterday'<br/>E.g. '/alliance nl74 yesterday' will show yesterday's alliance scoreboard for nl74</div>
                     </div>
 
                     <hr>
@@ -93,8 +93,8 @@
                     <h3>Player search</h3>
 
                     <div class="row">
-                        <div class="col-xs-5 vcenter"><pre>/search [name]</pre></div>
-                        <div class="col-xs-7 vcenter">Search for <strong>players</strong> by name</div>
+                        <div class="col-5 vcenter"><pre>/search [name]</pre></div>
+                        <div class="col-7 vcenter">Search for <strong>players</strong> by name</div>
                     </div>
 
                 </div>
