feat(deps): faq template - bootstrap 4

--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -24,34 +24,34 @@
     <div class="faq-content">
       <br/>
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-8">
           1. <strong>Indexing reports:</strong> Reports in your inbox and on your forum will receive an additional '<strong class="gd-primary">Index +</strong>' button.
           When you click on this button, the report is uploaded to your personal GrepoData account and is shared with all your teammates.
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-4">
           <img class="lib-img img-scale" style="max-width: 100%; display: block; border: 1px solid #334254;" src="../../assets/images/index.png" alt="Grepolis index report">
         </div>
       </div>
       <br/>
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-8">
           2. <strong>Sharing commands:</strong> Your in-game command overview will receive a new '<strong class="gd-primary">Share with team</strong>' button.
           When you click on this button, your commands are uploaded to a real-time shared command overview for you and your teammates.
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-4">
           <img class="lib-img img-scale" style="max-width: 100%; display: block; border: 1px solid #334254;" src="../../assets/images/share_commands.jpg" alt="Grepolis share commands">
         </div>
       </div>
       <br/>
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-8">
           3. <strong>Browsing intel:</strong> The extracted enemy intelligence from the report is linked to your personal GrepoData account.
           This allows you to browse the collected intel using the in-game town intel view or by signing in here.
           <br/>
           <br/>
           4. <strong>Sharing intel & commands:</strong> If you are a member of a GrepoData team and if you enable contributions to that team, the reports you index and the commands you upload will be shared with your allies as long as they also have access to that team.
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-4">
           <img class="lib-img img-scale" style="max-width: 100%; display: block;" src="../../assets/images/indexer_town_sm.png" alt="Grepolis town intel">
           <h5 class="gd-secondary" style="float: right;">Images copyright © InnoGames GmbH</h5>
         </div>
