--- a/src/app/homepage/indexer-update/indexer-update.component.html
+++ b/src/app/homepage/indexer-update/indexer-update.component.html
@@ -1,7 +1,7 @@
 
 <mat-card class="">
   <div class="row">
-    <div class="col-xs-12 text-left">
+    <div class="col-12 text-left">
       <div class="text-center">
         <h1 class="gd-primary">City indexer update & heatmap removal</h1>
         <h5 style="font-style: italic">April 18, 2021 - admin@grepodata.com</h5>
